modal jump removed, position now fixed

--- a/hypes.css
+++ b/hypes.css
@@ -382,12 +382,7 @@ html, body, ul {
 .modal {
     height: 100%;
     width: 100%;
-    position: fixed;
-    overflow-x: hidden;
-    overflow-y: auto;
     display: none;
-    justify-content: center;
-    align-items: center;
 }
 
 .modal.shadow > .modal-content {
@@ -402,6 +397,11 @@ html, body, ul {
     background-color: white;
     border: 2px solid black;
     border-radius: .5em;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    /* bring your own prefixes */
+    transform: translate(-50%, -50%);
 }
 
 .modal-container {
@@ -431,11 +431,7 @@ html, body, ul {
 }
 
 .modal.fade *{
-    animation: fade .12s linear;
-}
-
-.modal.jump > .modal-content{
-    animation: jump .25s ease-in-out; 
+    animation: fade .12s linear, slide .3s cubic-bezier(0.18, 0.89, 0.32, 1.28);
 }
 
 @keyframes fade {
@@ -444,15 +440,9 @@ html, body, ul {
     }
 }
 
-@keyframes jump {
+@keyframes slide {
     0% {
-        transform: scale(.95);
-    }
-    50% {
-        transform: scale(1.05);
-    }
-    100% {
-        transform: scale(1);
+        top: 45vh;
     }
 }
 
@@ -463,7 +453,7 @@ html, body, ul {
 .modal.modal-alert {
     height: 100%;
     width: 100%;
-    position: static;
+    position: fixed;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -485,36 +475,11 @@ html, body, ul {
     background-color: white;
     border-radius: 0;
     border: none;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .modal-alert .modal-content * {
     font-family: 'Ubuntu', sans-serif;
-}
-
-.modal.fade *{
-    animation: fade .12s linear;
-}
-
-.modal.jump > .modal-content{
-    animation: jump .25s ease-in-out; 
-}
-
-@keyframes fade {
-    0% {
-        opacity: 0;
-    }
-}
-
-@keyframes jump {
-    0% {
-        transform: scale(.95);
-    }
-    50% {
-        transform: scale(1.05);
-    }
-    100% {
-        transform: scale(1);
-    }
 }
 
 /* #endregion modal alert */
